appId: "com.edwardcerverizzo.flashcardsv4"
---
- launchApp
- assertVisible: "Welcome!"
- tapOn: "Explore"
- assertVisible: "Explore"
- tapOn: "File.*"

